--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "src/index.js",
   "dependencies": {
     "bootstrap": "4.6.0",
+    "firebase": "8.3.2",
     "jquery": "3.5.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
