--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
-  "name": "bill-app-v29032021",
+  "name": "integrating-firebase-with-basic-bill-working",
   "version": "1.0.0",
   "description": "",
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
     "bootstrap": "4.6.0",
+    "firebase": "8.3.2",
     "jquery": "3.5.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-router-dom": "5.2.0",
-    "react-scripts": "4.0.0"
+    "react-scripts": "4.0.0",
+    "uuid": "8.3.2"
   },
   "devDependencies": {
     "typescript": "4.1.3"
