--- a/package.json
+++ b/package.json
@@ -6,11 +6,15 @@
   "main": "src/index.js",
   "dependencies": {
     "bootstrap": "4.6.0",
+    "echart": "0.1.3",
+    "echarts": "5.0.2",
+    "echarts-for-react": "3.0.1",
     "jquery": "3.5.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-router-dom": "5.2.0",
-    "react-scripts": "4.0.0"
+    "react-scripts": "4.0.0",
+    "tslib": "2.2.0"
   },
   "devDependencies": {
     "typescript": "4.1.3"
