--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "echart": "0.1.3",
     "echarts": "5.0.2",
     "echarts-for-react": "3.0.1",
+    "firebase": "8.3.2",
     "jquery": "3.5.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.0",
-    "tslib": "2.2.0"
+    "tslib": "2.2.0",
+    "uuid": "8.3.2"
   },
   "devDependencies": {
     "typescript": "4.1.3"
