--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bill-app-v29032021",
+  "name": "basic-bill-with-sign-up-functionality",
   "version": "1.0.0",
   "description": "",
   "keywords": [],
