--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "echarts-for-react": "3.0.1",
     "firebase": "8.3.2",
     "jquery": "3.5.1",
+    "moment": "2.29.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-router-dom": "5.2.0",
